# FreelyGivenHarmonicChurch.github.io

./: .tool-versions  404.html  CNAME  Makefile  README.md  index.html  mkdocs.yml  notes.txt  pyproject.toml  search.html  sitemap.xml
docs/: index.md
docs/music/: taize.md
docs/music/original/: i_am_willing.md  son_of_man.md
docs/music/sacred/: taize.md  texts.md
docs/practice/: texts.md
docs/practice/recitations/: chants.md  prayers.md
docs/wisdom/: action.md  interconnectedness.md  love.md  mindfulness.md  moderation.md  nonviolence.md  pluralism.md  reason.md  teachers.md
docs/wisdom/foundations/: action.md  community.md  interconnectedness.md  love.md  nonviolence.md  reason.md  rejecting_mammon.md  works.md
docs/wisdom/quotations/: love.md  nature.md  reason.md  simplicity.md
docs/wisdom/teachers/: teachers.md
docs/wisdom/worldviews/: christian_anarchism.md  deep_ecology.md  double_belonging.md  mysticism.md
docs/worship/: prayers.md  texts.md
music/: index.html
music/taize/: index.html
practice/texts/: index.html
prayer/: index.html
search/: search_index.json
teachers/: index.html
wisdom/action/: index.html
wisdom/interconnectedness/: index.html
wisdom/love/: index.html
wisdom/mindfulness/: index.html
wisdom/moderation/: index.html
wisdom/nature/: index.html
wisdom/nonviolence/: index.html
wisdom/pluralism/: index.html
wisdom/reason/: index.html
wisdom/rejecting_mammon/: index.html
wisdom/simplicity/: index.html
wisdom/teachers/: index.html
worship/prayers/: index.html
worship/texts/: index.html
(+72 files in other folders)
