[tool.poetry]
name = "freelygivenharmonicchurch.github.io"
version = "0.1.0"
description = ""
authors = ["FreelyGivenHarmonicChurch <contact@freelygivenharmonic.church>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.3.0"
mkdocs-gitbook = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
